<resources>
    <string name="app_name">Go Helpers</string>
    <string name="intro_title_slide1">Pilih Layanan Dari Kami</string>
    <string name="intro_title_slide2">Tentukan Waktu Dan Lokasi</string>
    <string name="intro_title_slide3">Terima Pelayanan</string>
    <string name="intro_description1">Pilih beragam layanan yang kami sediakan disini.</string>
    <string name="intro_description2">Tentukan waktu dan lokasi yang anda inginkan untuk menerima pelayanan dari kami.</string>
    <string name="intro_description3">Para pekerja profesional kami akan datang dengan perlengkapan penuh sesuai kebutuhan ke tempat dan waktu yang anda pilih.</string>
    <string name="email_label">Email</string>
    <string name="password_label">Kata Sandi</string>
    <string name="login_label">Masuk</string>
    <string name="showcase_title">Top Home Cleaning</string>
    <string name="showcase_service_type">Jenis Pelayanan</string>
    <string name="showcase_service_advantages">Keuntungan Pelayanan</string>
    <string name="showcase_more_information">Informasi Lebih</string>
    <string name="order_label">Pesan</string>
    <string name="order_label_act">Pesan Layanan</string>

    <string name="order_date_label">Tanggal Pemesanan</string>
    <string name="order_time_label">Waktu Pemesanan</string>
    <string name="order_location_label">Lokasi</string>
    <string name="order_location_detail_label">Detail Lokasi</string>
    <string name="order_phone_label">Telepon</string>
    <string name="order_employee_grades_label">Peringkat Pembantu</string>
    <string name="order_service_package_label">Paket Layanan</string>
    <string name="order_24_hours_label">Mode 24 Jam</string>
    <string name="order_price_label">Harga</string>

    <string name="landing_label_act">Landing</string>

    <string name="signup_label_act">Daftar</string>

    //navmenu
    <string name="nav_home_label">Beranda</string>
    <string name="nav_history_label">Riwayat</string>
    <string name="nav_setting_label">Pengaturan</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="message_loading">Memuat Data...</string>
    <string name="title_activity_maps">Map</string>
    <string name="promotion_words">Kami siap melayani anda dengan tenaga ahli terbaik</string>
</resources>
