<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/order_date_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/order_date_label"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <EditText
                    android:id="@+id/date_input"
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/order_time_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/order_date_label"
                    android:src="@drawable/ic_alarm_black_24dp" />

                <EditText
                    android:id="@+id/time_input"
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/mode_24_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:text="@string/order_24_hours_label"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/order_location_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/order_date_label"
                    android:src="@drawable/ic_my_location_black_24dp" />

                <EditText
                    android:id="@+id/location_input"
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/order_location_detail_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/order_location_detail_label"
                    android:src="@drawable/ic_place_black_24dp" />

                <EditText
                    android:id="@+id/detail_location_input"
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="4"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/order_phone_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/order_phone_label"
                    android:src="@drawable/ic_call_black_24dp" />

                <EditText
                    android:id="@+id/phone_input"
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:inputType="phone" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/order_employee_grades_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/order_phone_label"
                    android:src="@drawable/ic_face_black_24dp" />

                <Spinner
                    android:id="@+id/employee_grade_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/order_service_package_label"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/order_phone_label"
                    android:src="@drawable/ic_assignment_black_24dp" />

                <Spinner
                    android:id="@+id/service_package_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

            </LinearLayout>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
                <!--style="@style/TextLabel"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:hint="@string/order_price_label"-->
                <!--android:textSize="14sp" />-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:contentDescription="@string/order_phone_label"-->
                    <!--android:src="@drawable/ic_credit_card_black_24dp" />-->

                <!--<EditText-->
                    <!--android:id="@+id/price_input"-->
                    <!--style="@style/TextAppearance.AppCompat"-->
                    <!--android:layout_width="0dip"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:editable="false"-->
                    <!--android:focusable="false"-->
                    <!--android:textSize="14sp" />-->

            <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/amber600"
            android:text="@string/order_label" />
    </LinearLayout>
</ScrollView>